# phaneron

./: .gitignore  Cargo.toml  README.md  flake.nix  plugins.toml  video_inputs.example.json
phaneron/: Cargo.toml  README.md
phaneron-api/: asyncapi.yaml  openapi.yaml  openapitools.json
phaneron-api/openapi/: graphs.yaml  phaneron.yaml  plugins.yaml
phaneron-book/: README.md  book.toml
phaneron-book/src/: SUMMARY.md
phaneron-book/src/development/: linux-macos-dev-shell.md
phaneron-book/src/plugins/: shader-only.md
phaneron-plugin/: Cargo.toml  LICENSE  README.md
phaneron-plugin-decklink/: Cargo.toml  README.md
phaneron-plugin-decklink/src/: decklink_consumer.rs  decklink_consumer_config.rs  decklink_consumer_thread.rs  lib.rs
phaneron-plugin-demo/: Cargo.toml  README.md
phaneron-plugin-demo/shaders/: dissolve.cl
phaneron-plugin-demo/src/: dissolve.rs  lib.rs  traditional_mixer_emulator.rs  turbo_consumer.rs
phaneron-plugin-ffmpeg/: Cargo.toml  README.md
phaneron-plugin-ffmpeg/src/: ffmpeg_producer.rs  lib.rs
phaneron-plugin-shaders/: flip.cl  flip.json
phaneron-plugin-utils/: Cargo.toml  README.md
phaneron-plugin-utils/src/: lib.rs  yadif.rs
phaneron-plugin-utils/src/shaders/: yadif.cl
phaneron-plugin-webrtc/: Cargo.toml  README.md
phaneron-plugin-webrtc/src/: lib.rs  webrtc_consumer.rs
phaneron-plugin/src/: audio.rs  colour.rs  graph.rs  lib.rs  traits.rs  types.rs  video.rs
phaneron-plugin/src/colour/: bt_2020.rs  bt_601_525.rs  bt_601_625.rs  bt_709.rs  srgb.rs
phaneron/shaders/video_process/consume/: bgra8.cl  rgba8.cl  v210.cl  yuv420p.cl  yuv422p10.cl  yuv422p8.cl
phaneron/shaders/video_process/load/: bgra8.cl  rgba8.cl  v210.cl  yuv420p.cl  yuv422p10.cl  yuv422p8.cl
phaneron/src/: api.rs  channel.rs  colour.rs  compute.rs  format.rs  graph.rs  io.rs  lib.rs  load_save.rs  main.rs  node_context.rs  plugins.rs  state.rs
phaneron/src/api/: message.rs  rest.rs  ws.rs
phaneron/src/api/rest/: request.rs  response.rs
phaneron/src/compute/: audio_frame.rs  audio_output.rs  video_frame.rs  video_output.rs
phaneron/src/format/: bgra.rs  rgba8.rs  v210.rs  yuv420p.rs  yuv422p10.rs  yuv422p8.rs
phaneron/src/io/: tests.rs
phaneron/src/plugins/: cl_shader_plugin.rs
shaders/video_process/: dissolve.cl  yadif.cl
shaders/video_process/consume/: bgra8.cl  rgba8.cl  v210.cl  yuv420p.cl  yuv422p10.cl  yuv422p8.cl
shaders/video_process/load/: bgra8.cl  rgba8.cl  v210.cl  yuv420p.cl  yuv422p10.cl  yuv422p8.cl
src/: api.rs  channel.rs  colour.rs  compute.rs  dissolve.rs  format.rs  graph.rs  io.rs  lib.rs  load_save.rs  main.rs  node_context.rs  plugins.rs  state.rs  yadif.rs
src/api/: message.rs  ws.rs
src/colour/: bt_2020.rs  bt_601_525.rs  bt_601_625.rs  bt_709.rs  srgb.rs
src/compute/: audio_frame.rs  audio_stream.rs  video_frame.rs  video_output.rs
src/format/: bgra.rs  rgba8.rs  v210.rs  yuv420p.rs  yuv422p10.rs  yuv422p8.rs
src/plugins/: ffmpeg_producer.rs  traditional_mixer_emulator.rs  turbo_consumer.rs  webrtc_consumer.rs
