[package]
name = "phaneron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
axum = { version = "0.6.10", features = ["macros", "ws"] }
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["cargo"] }
ffmpeg-the-third = "1.1.2"
futures = { version = "0.3.25" }
lazy_static = "1.4.0"
nalgebra = "0.32.1"
opencl3 = "0.9.2"
opus = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
vpx-encode = { version = "0.6.2", features = ["vp9"] }
webrtc = "0.7.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
