[workspace]
members = [
    "phaneron",
    "phaneron-plugin",
    "phaneron-plugin-utils",
    "phaneron-plugin-demo",
    "phaneron-plugin-decklink",
    "phaneron-plugin-ffmpeg",
    "phaneron-plugin-webrtc",
]
default-members = [
    "phaneron",
    "phaneron-plugin",
    "phaneron-plugin-utils",
    "phaneron-plugin-demo",
    "phaneron-plugin-decklink",
    "phaneron-plugin-ffmpeg",
    "phaneron-plugin-webrtc",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
