[package]
name = "phaneron-plugin-ffmpeg"
version = "0.1.2"
edition = "2021"
description = "FFmpeg plugin for Phaneron"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
anyhow = "1.0.70"
ffmpeg-the-third = "1.1.2"
log = "0.4.17"
phaneron-plugin = { version = "0.1.2", path = "../phaneron-plugin"}
phaneron-plugin-utils = { version = "0.1.2", path = "../phaneron-plugin-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
