[package]
name = "phaneron-plugin-webrtc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.1"
axum = { version = "0.6.10", features = ["macros", "ws"] }
byteorder = "1.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
opus = "0.3.0"
phaneron-plugin = { path = "../phaneron-plugin" }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
vpx-encode = { version = "0.6.2" }
webrtc = "0.7.0"
