[package]
name = "phaneron-plugin"
version = "0.1.1"
edition = "2021"
description = "Interfaces for implementing Phaneron plugins in Rust"
license = "GPL-3.0-or-later"

[dependencies]
abi_stable = "0.11.1"
log = "0.4.17"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
