[package]
name = "phaneron"
version = "0.1.2"
edition = "2021"
description = "Phaneron media compositing software."
license = "GPL-3.0-or-later"

[dependencies]
abi_stable = "0.11.1"
anyhow = "1.0.69"
anymap = "0.12.1"
async-trait = "0.1.64"
axum = { version = "0.6.10", features = ["macros", "ws"] }
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["cargo"] }
dotenv = "0.15.0"
futures = { version = "0.3.25" }
nalgebra = "0.32.1"
opencl3 = "0.9.2"
phaneron-plugin = { version = "0.1.2", path = "../phaneron-plugin"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
toml = "0.7.3"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
